# ai-data

./: README.md  参考计划.md
face/: 2017-10-5.md  README.md  cost.md  data-list.md  net-list.md  plan.md
face/android-app/MyFace/app/: build.gradle
face/android-app/MyFace/app/src/androidTest/java/com/gjs/myface/: ExampleInstrumentedTest.java
face/android-app/MyFace/app/src/main/: AndroidManifest.xml
face/android-app/MyFace/app/src/main/res/layout/: activity_main.xml
face/android-app/MyFace/app/src/test/java/com/gjs/myface/: ExampleUnitTest.java
face/android-app/MyFace/facelibrary/: CMakeLists.txt  build.gradle  proguard-rules.pro
face/android-app/MyFace/facelibrary/include/ncnn/: layer_type_enum.h
face/android-app/MyFace/facelibrary/include/opencv2/: cvconfig.h  opencv_modules.hpp
face/android-app/MyFace/facelibrary/src/main/assets/model/: local.param
face/android-app/MyFace/facelibrary/src/main/cpp/: face.cpp  utils.h
face/android-app/MyFace/facelibrary/src/main/java/com/gjs/facelibrary/: Face.java
face/dealdata/: dlda.py  dldmlist.py  dldmlmlist.py  dldrawimgdmlm.py  dlimgdmlm2hd5.py  dlimglist.py  dlimgmean.py  dljoindmlm.py  dlpickimg.py  dlprod.py  dlprodcap.py  dlprodimg.py  dlpts2lm.py  dltmp.py
face/dealdata/bak/: deal.py
face/model/fine/: deploy.prototxt  solver.prototxt  train_val.prototxt
face/model/train/: deploy.prototxt  gpumonitor.sh  test.sh  test.txt  time.sh  train.sh  train.txt  train_test.prototxt  train_val.prototxt  val.txt
face/model/train/1024_100/: solver.prototxt
face/model/train/1024_200/: solver.prototxt
face/model/train/512_100/: solver.prototxt
face/model/train/512_200/: solver.prototxt
melosslayer/: NormlizedMSE.py  mtcnn_accuracy_layer.cpp  mtcnn_softmax_loss_layer.cpp  mtcnnlayers.py
plan/: README.md  参考计划.md  计划.md
src/: .gitignore
src/MyFace/app/: build.gradle
src/MyFace/app/src/main/java/com/gjs/myface/activity/: ActivityCamera.java  MainActivity.java
src/MyFace/app/src/main/java/com/gjs/myface/gpuimage/: GPUImageFilterGroup.java  (+3 more)
src/MyFace/app/src/main/res/layout/: activity_camera.xml
src/MyFace/app/src/main/res/values/: styles.xml
src/MyFace/facelibrary/: CMakeLists.txt  build.gradle
src/MyFace/facelibrary/src/androidTest/java/com/gjs/facelibrary/: ExampleInstrumentedTest.java
src/MyFace/facelibrary/src/main/: AndroidManifest.xml
src/MyFace/facelibrary/src/main/assets/model/: face_alig.param
src/MyFace/facelibrary/src/main/cpp/: VideoFaceDetector.cpp  VideoFaceDetector.h  face.cpp  utils.cpp
src/MyFace/facelibrary/src/main/java/com/gjs/facelibrary/: Face.java  Info.java
src/MyFace/facelibrary/src/test/java/com/gjs/facelibrary/: ExampleUnitTest.java
src/MyFace/gradle/wrapper/: gradle-wrapper.properties
tools/: get_params.py
tools-caffe/: cfmd2txt.py  cfmdcol2row.py  tmp.txt
tools-caffe/cfmd2txt/: CMakeLists.txt  cfmd2txt  main.cpp
tools/caffe/txt_caffe_model/: CMakeLists.txt
(+10 files in other folders)
